# PWP

./: .env  .gitignore  README.md  docker-compose.yml  init_db.py  meetings.md  models.py  pyproject.toml  requirements.txt  ticketing.yaml
backend/: .dockerignore  Dockerfile  config.py  requirements.txt  run.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_auth.py  test_cache.py  test_logging.py  test_models.py  test_utils.py  test_views.py
backend/ticketing/: __init__.py  api.py  auth.py  cache.py  models.py  seed.py  utils.py  views.py
backend/ticketing/resources/: __init__.py  event.py  order.py  ticket.py  user.py
backend/ticketing/static/schema/: event_schema.json
docs/: OVERVIEW.md  gui-layout.md  screen-workflow.md  use-case-diagram.md
docs/auxiliary-services/: email-service.md  map-service.md
email-service/: .pylintrc  Dockerfile  README.md  app.py  config.py  requirements.txt  service.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  app.js  index.html  nginx.conf
instance/: development.db
tests/: api_test.py  conftest.py  db_test.py  helpers.py  test_api.py  test_views.py  utils_test.py
ticketing/: __init__.py  api.py  auth.py  models.py  utils.py
ticketing/resources/: event.py  order.py  ticket.py  user.py
ticketing/static/schema/: order_schema.json  ticket_schema.json  user_schema.json
