[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-sale-api"
version = "0.1.0"
description = "System for managing ticket sales for events."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aniso8601==10.0.1",
    "blinker==1.9.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "Flask==3.1.2",
    "flask-cors==6.0.2",
    "flask-marshmallow==1.4.0",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "fonttools==4.61.1",
    "greenlet==3.3.1",
    "gunicorn==25.0.3",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "MarkupSafe==3.0.3",
    "marshmallow==4.2.2",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.0",
    "pillow==12.1.0",
    "Pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "SQLAlchemy==2.0.46",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "Werkzeug==3.1.5"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pluggy==1.6.0",
    "iniconfig==2.3.0"
]

[tool.setuptools.packages.find]
where = ["."]